k8s/chatroom.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chatroom
  namespace: default
  labels:
    app: chatroom
spec:
  replicas: 1  # only one pod per node for hostNetwork/Mediasoup UDP
  selector:
    matchLabels:
      app: chatroom
  template:
    metadata:
      labels:
        app: chatroom
    spec:
      hostNetwork: true  # bind container network directly to node
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: chatroom
        image: europe-north2-docker.pkg.dev/blundr/blundr-repo/chatroom:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: chatroom
  namespace: default
  labels:
    app: chatroom
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/network-tier: Standard
spec:
  type: LoadBalancer
  loadBalancerIP: 34.2.61.139
  externalTrafficPolicy: Local  # forward traffic only to nodes with pods
  ports:
  - port: 80           # external LB port
    targetPort: 8081   # container port
    protocol: TCP
  selector:
    app: chatroom
