k8s/face-emotion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fer
  labels:
    app: blundr
    component: fer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blundr
      component: fer
  template:
    metadata:
      labels:
        app: blundr
        component: fer
      annotations:
        gke-gcsfuse/volumes: "true"
        gke-gcsfuse/cpu-request: "50m"
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: swimming-pool
      serviceAccountName: fer-sa
      terminationGracePeriodSeconds: 600 # avoid terminating background jobs on update
      containers:
        - name: fer
          image: europe-north2-docker.pkg.dev/blundr/blundr-repo/fer:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: gcs-fer-model-bucket
              mountPath: /models
              readOnly: true
          ports:
            - containerPort: 42069
      volumes:
        - name: gcs-fer-model-bucket
          csi:
            driver: gcsfuse.csi.storage.gke.io
            volumeAttributes:
              bucketName: "blundr-fer-models"
              mountOptions: "implicit-dirs"
---
apiVersion: v1
kind: Service
metadata:
  name: fer-service
  labels:
    app: blundr
    component: fer
spec:
  selector:
    app: blundr
    component: fer
  ports:
    - name: http
      port: 80
      targetPort: 42069
      protocol: TCP
    - name: legacy
      port: 42069
      targetPort: 42069
      protocol: TCP
  type: ClusterIP
