k8s/voice-emotion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ver
  labels:
    app: blundr
    component: ver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blundr
      component: ver
  template:
    metadata:
      labels:
        app: blundr
        component: ver
    spec:
      containers:
        - name: ver
          image: europe-north2-docker.pkg.dev/blundr/blundr-repo/ver:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 42069
---
apiVersion: v1
kind: Service
metadata:
  name: ver-service
  labels:
    app: blundr
    component: ver
spec:
  selector:
    app: blundr
    component: ver
  ports:
    - name: http
      port: 80
      targetPort: 42069
      protocol: TCP
    - name: legacy
      port: 42069
      targetPort: 42069
      protocol: TCP
  type: ClusterIP
