k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-reverse-proxy
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      # FER service
      - path: /face-emotion
        pathType: Prefix
        backend:
          service:
            name: fer-service
            port:
              number: 80
      # VER service
      - path: /voice-emotion
        pathType: Prefix
        backend:
          service:
            name: ver-service
            port:
              number: 80
      # Aggregator service
      - path: /aggregator
        pathType: Prefix
        backend:
          service:
            name: aggregator-service
            port:
              number: 80
      # Admin API
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 80
